## The hoc_e editor is an ancient line editor used to do some
## filtering that is somewhat beyond sed. It used to be in the oc directory
## but was moved here to make it easier to do cross compilation since this
## as well as modlunit and nocmodl must be compiled for execution on the
## build machine.

bin_PROGRAMS = hoc_e

hoc_e_SOURCES = hoc_e.c

INCLUDES = -I$(top_srcdir)/src/oc
